Add final project in list

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
                           <h2 class="hm-headline">Домашние задания:</h2>
                           <ul class="hm-list">
                             <li class="point" ><a href="http://ervin-web-dev-homework.info/web-developer-homework.github.io/practice/app/" target="_blank" onclick="ym(54312450, 'practiceWOW', 'practiceWOW'); return true;">Практика</a> — Гипсолит</li>
+                            <li class="point"><a href="http://ervin-web-dev-homework.info/web-developer-homework.github.io/final_project/app/" target="_blank">Выпускной проект</a> — VRBox</li>
                             <li class="point"><a href="http://ervin-web-dev-homework.info/web-developer-homework.github.io/lesson_9" target="_blank">Урок 9</a> — Bootstrap 4</li>
                             <li class="point"><a href="http://ervin-web-dev-homework.info/web-developer-homework.github.io/lesson_13" target="_blank">Урок 13</a> — Pixel Perfect (вёрстка формы)</li>
                             <li class="point"><a href="http://ervin-web-dev-homework.info/web-developer-homework.github.io/lesson_14/app/" target="_blank">Урок 14</a> — Подключение шрифтов</li>
