--- a/index.html
+++ b/index.html
@@ -51,22 +51,22 @@
                     <section class="sec-1">
                           <h2 class="hm-headline">Домашние задания:</h2>
                           <ul class="hm-list">
-                            <li class="point" ><a href="http://ervin-web-dev-homework.info/web-developer-homework.github.io/practice/app/" target="_blank" onclick="ym(54312450, 'practiceWOW', 'practiceWOW'); return true;">Практика</a> — Гипсолит</li>
-                            <li class="point"><a href="http://ervin-web-dev-homework.info/web-developer-homework.github.io/final_project/app/" target="_blank">Выпускной проект</a> — VRBox</li>
-                            <li class="point"><a href="http://ervin-web-dev-homework.info/web-developer-homework.github.io/lesson_9" target="_blank">Урок 9</a> — Bootstrap 4</li>
-                            <li class="point"><a href="http://ervin-web-dev-homework.info/web-developer-homework.github.io/lesson_13" target="_blank">Урок 13</a> — Pixel Perfect (вёрстка формы)</li>
-                            <li class="point"><a href="http://ervin-web-dev-homework.info/web-developer-homework.github.io/lesson_14/app/" target="_blank">Урок 14</a> — Подключение шрифтов</li>
-                            <li class="point"><a href="http://ervin-web-dev-homework.info/web-developer-homework.github.io/lesson_16/app/" target="_blank">Урок 16</a> — Слайдер</li>
-                            <li class="point"><a href="http://ervin-web-dev-homework.info/web-developer-homework.github.io/lesson_17/app/" target="_blank">Урок 17</a> — Всплывающее окно</li>
-                            <li class="point"><a href="http://ervin-web-dev-homework.info/web-developer-homework.github.io/lesson_18/app/" target="_blank">Урок 18</a> — Табы и аккордеон</li>
-                            <li class="point"><a href="http://ervin-web-dev-homework.info/web-developer-homework.github.io/lesson_20/app/" target="_blank">Урок 20</a> — Видео-фон</li>
-                            <li class="point"><a href="http://ervin-web-dev-homework.info/web-developer-homework.github.io/lesson_21/app/" target="_blank">Урок 21 (офиц. ДЗ)</a> — Parallax (провал)</li>
-                            <li class="point"><a href="http://ervin-web-dev-homework.info/web-developer-homework.github.io/lesson_21/dz/" target="_blank">Урок 21 (Замена 1)</a> — Parallax</li>
-                            <li class="point"><a href="http://ervin-web-dev-homework.info/web-developer-homework.github.io/lesson_21/dz2/" target="_blank">Урок 21 (Замена 2)</a> — Parallax</li>
-                            <li class="point"><a href="http://ervin-web-dev-homework.info/web-developer-homework.github.io/lesson_22/app/" target="_blank">Урок 22</a> — Гео-карта</li>
-                            <li class="point"><a href="http://ervin-web-dev-homework.info/web-developer-homework.github.io/lesson_25/app/" target="_blank">Урок 25</a> — Отправка формы на email</li>
-                            <li class="point"><a href="http://ervin-web-dev-homework.info/web-developer-homework.github.io/lesson_26/app/" target="_blank">Урок 26</a> — Многостраничный сайт</li>
-                            <li class="point"><a href="http://ervin-web-dev-homework.info/web-developer-homework.github.io/lesson_27/wordpress/" target="_blank">Урок 27</a> — WordPress (Часть 1)</li>
+                            <li class="point" ><a href="web-developer-homework.github.io/practice/app/" target="_blank" onclick="ym(54312450, 'practiceWOW', 'practiceWOW'); return true;">Практика</a> — Гипсолит</li>
+                            <li class="point"><a href="web-developer-homework.github.io/final_project/app/" target="_blank">Выпускной проект</a> — VRBox</li>
+                            <li class="point"><a href="web-developer-homework.github.io/lesson_9" target="_blank">Урок 9</a> — Bootstrap 4</li>
+                            <li class="point"><a href="web-developer-homework.github.io/lesson_13" target="_blank">Урок 13</a> — Pixel Perfect (вёрстка формы)</li>
+                            <li class="point"><a href="web-developer-homework.github.io/lesson_14/app/" target="_blank">Урок 14</a> — Подключение шрифтов</li>
+                            <li class="point"><a href="web-developer-homework.github.io/lesson_16/app/" target="_blank">Урок 16</a> — Слайдер</li>
+                            <li class="point"><a href="web-developer-homework.github.io/lesson_17/app/" target="_blank">Урок 17</a> — Всплывающее окно</li>
+                            <li class="point"><a href="web-developer-homework.github.io/lesson_18/app/" target="_blank">Урок 18</a> — Табы и аккордеон</li>
+                            <li class="point"><a href="web-developer-homework.github.io/lesson_20/app/" target="_blank">Урок 20</a> — Видео-фон</li>
+                            <li class="point"><a href="web-developer-homework.github.io/lesson_21/app/" target="_blank">Урок 21 (офиц. ДЗ)</a> — Parallax (провал)</li>
+                            <li class="point"><a href="web-developer-homework.github.io/lesson_21/dz/" target="_blank">Урок 21 (Замена 1)</a> — Parallax</li>
+                            <li class="point"><a href="web-developer-homework.github.io/lesson_21/dz2/" target="_blank">Урок 21 (Замена 2)</a> — Parallax</li>
+                            <li class="point"><a href="web-developer-homework.github.io/lesson_22/app/" target="_blank">Урок 22</a> — Гео-карта</li>
+                            <li class="point"><a href="web-developer-homework.github.io/lesson_25/app/" target="_blank">Урок 25</a> — Отправка формы на email</li>
+                            <li class="point"><a href="web-developer-homework.github.io/lesson_26/app/" target="_blank">Урок 26</a> — Многостраничный сайт</li>
+                            <li class="point"><a href="web-developer-homework.github.io/lesson_27/wordpress/" target="_blank">Урок 27</a> — WordPress (Часть 1)</li>
                           </ul>
                         </section>
                   </div>
