--- a/web-developer-homework.github.io/final_project/app/index.html
+++ b/web-developer-homework.github.io/final_project/app/index.html
@@ -167,7 +167,7 @@
                 <h1 class="headline">Введите ваши данные и нажмите заказать</h1>
                 <input type="text" name="username" placeholder="Введите имя" id="username" required>
                 <input type="tel" name="userphone" placeholder="Введите телефон" id="phone" required>
-                <button type="submit" id="btn-submit">Заказать vr box 2</button>
+                <input type="submit" id="btn-submit" value="Заказать vr box 2"></input>
                 <p class="callback-text">Перезвоним в течение 10 минут</p>
               </div>
             </form>
@@ -496,7 +496,7 @@
                 <h1 class="headline">Введите ваши данные и нажмите заказать</h1>
                 <input type="text" name="username" placeholder="Введите имя" id="username" required>
                 <input type="tel" name="userphone" placeholder="Введите телефон" id="phone-1" required>
-                <button type="submit" id="btn-submit">Заказать vr box 2</button>
+                <input type="submit" id="btn-submit" value="Заказать vr box 2"></input>
                 <p class="callback-text">Перезвоним в течение 10 минут</p>
               </div>
             </form>
@@ -551,7 +551,7 @@
         <option>С Bluetooth пультом</option>
         <option>Без Bluetooth пульта</option>
       </select>
-      <button type="submit" id="btn-submit" class="">Заказать vr box 2</button>
+      <input type="submit" id="btn-submit" value="Заказать vr box 2"></input>
       <p class="callback-text">Перезвоним в течение 10 минут</p>
     </div>
   </form>
@@ -564,7 +564,7 @@
       <div class="close-btn close-btn-call">&times;</div>
       <input type="text" name="username" placeholder="Введите имя" id="username" required>
       <input type="tel" name="userphone" placeholder="Введите телефон" id="phone-3" required>
-      <button type="submit" id="btn-submit" class="order-callback">Заказать звонок</button>
+      <input type="submit" id="btn-submit" class="order-callback" value="Заказать звонок"></input>
       <p class="callback-text">Перезвоним в течение 10 минут</p>
     </div>
   </form>
@@ -577,7 +577,7 @@
       <div class="close-btn close-btn-manager">&times;</div>
       <input type="text" name="username" placeholder="Введите имя" id="username" required>
       <input type="tel" name="userphone" placeholder="Введите телефон" id="phone-4" required>
-      <button type="submit" id="btn-submit" class="order-request">Оставить заявку</button>
+      <input type="submit" id="btn-submit" class="order-request" value="Оставить заявку"></input>
       <p class="callback-text">Перезвоним в течение 10 минут</p>
     </div>
   </form>
