--- a/web-developer-homework.github.io/final_project/app/index.html
+++ b/web-developer-homework.github.io/final_project/app/index.html
@@ -162,11 +162,11 @@
 
         <div class="column col-xl-5 offset-xl-1 col-lg-12 col-md-12 col-sm-12 col-12">
           <div class="sec-content">
-            <form action="assets/php/telegram.php" method="post" class="form">
+            <form action="php/telegram.php" method="post" class="form">
               <div class="form-content">
                 <h1 class="headline">Введите ваши данные и нажмите заказать</h1>
-                <input type="text" name="username" placeholder="Введите имя" id="username" required>
-                <input type="tel" name="userphone" placeholder="Введите телефон" id="phone" required>
+                <input type="text" name="user_name" placeholder="Введите имя" id="username" required>
+                <input type="tel" name="user_phone" placeholder="Введите телефон" id="phone" required>
                 <input type="submit" id="btn-submit" value="Заказать vr box 2"></input>
                 <p class="callback-text">Перезвоним в течение 10 минут</p>
               </div>
@@ -491,11 +491,11 @@
 
         <div class="column col-xl-5 offset-xl-1 col-lg-12 col-md-12 col-sm-12 col-12">
           <div class="sec-content">
-            <form action="assets/php/telegram.php" method="post" class="form">
+            <form action="php/telegram.php" method="post" class="form">
               <div class="form-content">
                 <h1 class="headline">Введите ваши данные и нажмите заказать</h1>
-                <input type="text" name="username" placeholder="Введите имя" id="username" required>
-                <input type="tel" name="userphone" placeholder="Введите телефон" id="phone-1" required>
+                <input type="text" name="user_name" placeholder="Введите имя" id="username" required>
+                <input type="tel" name="user_phone" placeholder="Введите телефон" id="phone-1" required>
                 <input type="submit" id="btn-submit" value="Заказать vr box 2"></input>
                 <p class="callback-text">Перезвоним в течение 10 минут</p>
               </div>
@@ -541,15 +541,15 @@
 <!-- MODAL -->
 <div class="overlay"></div>
 <div class="form-box form-box-equipment" id="equipment-pop-up">
-  <form action="assets/php/telegram.php" method="post" class="form">
+  <form action="php/telegram.php" method="post" class="form">
     <div class="form-content">
       <h1 class="headline">Введите ваши данные и нажмите заказать</h1>
       <div class="close-btn close-btn-equipment">&times;</div>
-      <input type="text" name="username" placeholder="Введите имя" id="username" required>
-      <input type="tel" name="userphone" placeholder="Введите телефон" id="phone-2" required>
-      <select id="availability-bluetooth">
-        <option>С Bluetooth пультом</option>
-        <option>Без Bluetooth пульта</option>
+      <input type="text" name="user_name" placeholder="Введите имя" id="username" required>
+      <input type="tel" name="user_phone" placeholder="Введите телефон" id="phone-2" required>
+      <select id="availability-bluetooth" name="availability_bluetooth">
+        <option value='true'>С Bluetooth пультом</option>
+        <option value='false'>Без Bluetooth пульта</option>
       </select>
       <input type="submit" id="btn-submit" value="Заказать vr box 2"></input>
       <p class="callback-text">Перезвоним в течение 10 минут</p>
@@ -558,12 +558,12 @@
 </div>
 
 <div class="form-box form-box-call">
-  <form action="assets/php/telegram.php" method="post" class="form" id="callback-pop-up">
+  <form action="php/telegram.php" method="post" class="form" id="callback-pop-up">
     <div class="form-content">
       <h1 class="headline">Введите ваши данные и нажмите заказать звонок</h1>
       <div class="close-btn close-btn-call">&times;</div>
-      <input type="text" name="username" placeholder="Введите имя" id="username" required>
-      <input type="tel" name="userphone" placeholder="Введите телефон" id="phone-3" required>
+      <input type="text" name="user_name" placeholder="Введите имя" id="username" required>
+      <input type="tel" name="user_phone" placeholder="Введите телефон" id="phone-3" required>
       <input type="submit" id="btn-submit" class="order-callback" value="Заказать звонок"></input>
       <p class="callback-text">Перезвоним в течение 10 минут</p>
     </div>
@@ -571,12 +571,12 @@
 </div>
 
 <div class="form-box form-box-manager">
-  <form action="assets/php/telegram.php" method="post" class="form" id="callback-pop-up">
+  <form action="php/telegram.php" method="post" class="form" id="callback-pop-up">
     <div class="form-content">
       <h1 class="headline">Оставьте заявку мы свяжемся с вами и ответим на все вопросы</h1>
       <div class="close-btn close-btn-manager">&times;</div>
-      <input type="text" name="username" placeholder="Введите имя" id="username" required>
-      <input type="tel" name="userphone" placeholder="Введите телефон" id="phone-4" required>
+      <input type="text" name="user_name" placeholder="Введите имя" id="username" required>
+      <input type="tel" name="user_phone" placeholder="Введите телефон" id="phone-4" required>
       <input type="submit" id="btn-submit" class="order-request" value="Оставить заявку"></input>
       <p class="callback-text">Перезвоним в течение 10 минут</p>
     </div>
@@ -591,7 +591,7 @@
   <!--jQuery-->
   <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <!-- MaskInput -->
-  <script src="assets/js/jquery.maskedinput.min.js"></script>
+  <script src="js/jquery.maskedinput.min.js"></script>
   <!-- Инизиализация MaskInput -->
   <script>
     jQuery(function ($) {
