--- a/web-developer-homework.github.io/final_project/app/index.html
+++ b/web-developer-homework.github.io/final_project/app/index.html
@@ -7,7 +7,7 @@
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   <link rel="stylesheet" href="css/fonts.css">
   <link rel="stylesheet" href="css/style.css">
-  <link rel=icon href="img/sec-1/logo.png"> 
+  <link rel=icon href="img/favicon-logo.png"> 
   <title>VR Box 2</title>
 </head>
 
@@ -111,6 +111,7 @@
         <div class="col-xl-6 col-lg-12 col-md-12 col-sm-12 col-12">
           <div class="sec-3-content">
             <img src="img/sec-3/ironman.png" alt="Ironman" class="ironman">
+            <img src="img/sec-3/little-diamond.png" alt="Diamond" class="little-diamond">
             <div class="fun-block watching">
               <img src="img/sec-3/table.png" alt="Table" class="table">
               <div class="fun-block-text watching-text">
@@ -130,8 +131,8 @@
                 <p>А также тест драйв автомобилей, погружение на дно океана, полеты в космос, виртуальный секс и многое другое. </p>
               </div>
             </div>
-            <img src="img/sec-3/rubin.png" alt="Rubin" class="rubin">
             <img src="img/sec-3/car-shark.png" alt="Car and shark" class="car-shark">
+            <img src="img/sec-3/rubin.png" alt="Rubin" class="rubin">
           </div>
           
         </div> <!--col-->
@@ -183,6 +184,7 @@
       <div class="row">
         <div class="sec-5-main col-xl-6 col-lg-12 col-md-12 col-sm-12 col-12">
           <img src="img/sec-5/snowboard.png" alt="Snowboard" class="snowboard">
+          <img src="img/sec-5/little-diamond.png" alt="Diamond" class="little-diamond">
           <div class="kind-of-sports">
             <img src="img/sec-5/ball.png" alt="Ball">
             <div class="kind-of-sports-text">
@@ -201,6 +203,7 @@
             </div>
           </div>
           <img src="img/sec-5/laptop.png" alt="Laptop" class="laptop">
+          <img src="img/sec-5/green-stone.png" alt="Green Stone" class="green-stone">
         </div> <!--col-->
       </div> <!--row-->
     </div> <!--container-->
