--- a/web-developer-homework.github.io/final_project/app/index.html
+++ b/web-developer-homework.github.io/final_project/app/index.html
@@ -46,7 +46,7 @@
           </div> <!--sell-prop-->
 
           <div class="dinosaur col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12">
-            <img src="img/sec-1/dinosaur.png" alt="Dinosaur" class="dinosaur-item">
+            <img src="img/sec-1/dinosaur.png" alt="Dinosaur" class="dinosaur-item rellax" data-rellax-speed="7">
           </div>
         </div> <!--row-->
     </div>
@@ -111,7 +111,7 @@
         <div class="col-xl-6 col-lg-12 col-md-12 col-sm-12 col-12">
           <div class="sec-3-content">
             <img src="img/sec-3/ironman.png" alt="Ironman" class="ironman">
-            <img src="img/sec-3/little-diamond.png" alt="Diamond" class="little-diamond">
+            <img src="img/sec-3/little-diamond.png" alt="Diamond" class="little-diamond rellax" data-rellax-speed="-1">
             <div class="fun-block watching">
               <img src="img/sec-3/table.png" alt="Table" class="table">
               <div class="fun-block-text watching-text">
@@ -132,7 +132,7 @@
               </div>
             </div>
             <img src="img/sec-3/car-shark.png" alt="Car and shark" class="car-shark">
-            <img src="img/sec-3/rubin.png" alt="Rubin" class="rubin">
+            <img src="img/sec-3/rubin.png" alt="Rubin" class="rubin rellax" data-rellax-speed="0.7">
           </div>
           
         </div> <!--col-->
@@ -184,7 +184,7 @@
       <div class="row">
         <div class="sec-5-main col-xl-6 col-lg-12 col-md-12 col-sm-12 col-12">
           <img src="img/sec-5/snowboard.png" alt="Snowboard" class="snowboard">
-          <img src="img/sec-5/little-diamond.png" alt="Diamond" class="little-diamond">
+          <img src="img/sec-5/little-diamond.png" alt="Diamond" class="little-diamond rellax" data-rellax-speed="0.2">
           <div class="kind-of-sports">
             <img src="img/sec-5/ball.png" alt="Ball">
             <div class="kind-of-sports-text">
@@ -203,7 +203,7 @@
             </div>
           </div>
           <img src="img/sec-5/laptop.png" alt="Laptop" class="laptop">
-          <img src="img/sec-5/green-stone.png" alt="Green Stone" class="green-stone">
+          <img src="img/sec-5/green-stone.png" alt="Green Stone" class="green-stone rellax" data-rellax-speed="-0.2">
         </div> <!--col-->
       </div> <!--row-->
     </div> <!--container-->
@@ -291,7 +291,7 @@
           </figure>
         </div> <!--col-->
       </div> <!--row-->
-      <img src="img/sec-7/coub.png" alt="Coub" class="coub">
+      <img src="img/sec-7/coub.png" alt="Coub" class="coub rellax" data-rellax-speed="5">
     </div> <!--container-->
   </section>
 
@@ -412,7 +412,7 @@
           </div>
         </div> <!--col-->
       </div> <!--row-->
-      <img src="img/sec-10/cloud.png" alt="Cloud" class="cloud">
+      <img src="img/sec-10/cloud.png" alt="Cloud" class="cloud rellax" data-rellax-speed="4">
     </div> <!--container-->
   </section>
 
@@ -593,6 +593,7 @@
 
   <!--jQuery-->
   <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/rellax/1.12.1/rellax.min.js"></script> -->
     <!-- MaskInput -->
   <script src="js/jquery.maskedinput.min.js"></script>
   <!-- Инизиализация MaskInput -->
@@ -608,6 +609,12 @@
   </script>
   <!--Bootstrap JS-->
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+
+  <script src="js/rellax.min.js"></script>
+  <script>
+    var rellax = new Rellax('.rellax');
+  </script>
+
   <script src=js/script.js></script> 
   </body> 
 </html>
