--- a/web-developer-homework.github.io/final_project/app/index.html
+++ b/web-developer-homework.github.io/final_project/app/index.html
@@ -166,9 +166,9 @@
             <form action="php/telegram.php" method="post" class="form">
               <div class="form-content">
                 <h1 class="headline">Введите ваши данные и нажмите заказать</h1>
-                <input type="text" name="user_name" placeholder="Введите имя" id="username" required>
+                <input type="text" name="user_name" placeholder="Введите имя" required>
                 <input type="tel" name="user_phone" placeholder="Введите телефон" id="phone" required>
-                <input type="submit" id="btn-submit" value="Заказать vr box 2"></input>
+                <input type="submit" value="Заказать vr box 2">
                 <p class="callback-text">Перезвоним в течение 10 минут</p>
               </div>
             </form>
@@ -497,9 +497,9 @@
               <form action="php/telegram.php" method="post" class="form">
                 <div class="form-content">
                   <h1 class="headline">Введите ваши данные и нажмите заказать</h1>
-                  <input type="text" name="user_name" placeholder="Введите имя" id="username" required>
+                  <input type="text" name="user_name" placeholder="Введите имя" required>
                   <input type="tel" name="user_phone" placeholder="Введите телефон" id="phone-1" required>
-                  <input type="submit" id="btn-submit" value="Заказать vr box 2"></input>
+                  <input type="submit" value="Заказать vr box 2">
                   <p class="callback-text">Перезвоним в течение 10 минут</p>
                 </div>
               </form>
@@ -548,39 +548,39 @@
       <div class="form-content">
         <h1 class="headline">Введите ваши данные и нажмите заказать</h1>
         <div class="close-btn close-btn-equipment">&times;</div>
-        <input type="text" name="user_name" placeholder="Введите имя" id="username" required>
+        <input type="text" name="user_name" placeholder="Введите имя" required>
         <input type="tel" name="user_phone" placeholder="Введите телефон" id="phone-2" required>
         <select id="availability-bluetooth" name="availability_bluetooth">
           <option value='true'>С Bluetooth пультом</option>
           <option value='false'>Без Bluetooth пульта</option>
         </select>
-        <input type="submit" id="btn-submit" value="Заказать vr box 2"></input>
+        <input type="submit" value="Заказать vr box 2">
         <p class="callback-text">Перезвоним в течение 10 минут</p>
       </div>
     </form>
   </div>
 
   <div class="form-box form-box-call">
-    <form action="php/telegram.php" method="post" class="form" id="callback-pop-up">
+    <form action="php/telegram.php" method="post" class="form">
       <div class="form-content">
         <h1 class="headline">Введите ваши данные и нажмите заказать звонок</h1>
         <div class="close-btn close-btn-call">&times;</div>
         <input type="text" name="user_name" placeholder="Введите имя" id="username" required>
         <input type="tel" name="user_phone" placeholder="Введите телефон" id="phone-3" required>
-        <input type="submit" id="btn-submit" class="order-callback" value="Заказать звонок"></input>
+        <input type="submit" class="order-callback" value="Заказать звонок">
         <p class="callback-text">Перезвоним в течение 10 минут</p>
       </div>
     </form>
   </div>
 
   <div class="form-box form-box-manager">
-    <form action="php/telegram.php" method="post" class="form" id="callback-pop-up">
+    <form action="php/telegram.php" method="post" class="form">
       <div class="form-content">
         <h1 class="headline">Оставьте заявку мы свяжемся с вами и ответим на все вопросы</h1>
         <div class="close-btn close-btn-manager">&times;</div>
         <input type="text" name="user_name" placeholder="Введите имя" id="username" required>
         <input type="tel" name="user_phone" placeholder="Введите телефон" id="phone-4" required>
-        <input type="submit" id="btn-submit" class="order-request" value="Оставить заявку"></input>
+        <input type="submit" class="order-request" value="Оставить заявку">
         <p class="callback-text">Перезвоним в течение 10 минут</p>
       </div>
     </form>
