--- a/web-developer-homework.github.io/final_project/app/index.html
+++ b/web-developer-homework.github.io/final_project/app/index.html
@@ -565,7 +565,7 @@
       <div class="form-content">
         <h1 class="headline">Введите ваши данные и нажмите заказать звонок</h1>
         <div class="close-btn close-btn-call">&times;</div>
-        <input type="text" name="user_name" placeholder="Введите имя" id="username" required>
+        <input type="text" name="user_name" placeholder="Введите имя" required>
         <input type="tel" name="user_phone" placeholder="Введите телефон" id="phone-3" required>
         <input type="submit" class="order-callback" value="Заказать звонок">
         <p class="callback-text">Перезвоним в течение 10 минут</p>
@@ -578,7 +578,7 @@
       <div class="form-content">
         <h1 class="headline">Оставьте заявку мы свяжемся с вами и ответим на все вопросы</h1>
         <div class="close-btn close-btn-manager">&times;</div>
-        <input type="text" name="user_name" placeholder="Введите имя" id="username" required>
+        <input type="text" name="user_name" placeholder="Введите имя" required>
         <input type="tel" name="user_phone" placeholder="Введите телефон" id="phone-4" required>
         <input type="submit" class="order-request" value="Оставить заявку">
         <p class="callback-text">Перезвоним в течение 10 минут</p>
@@ -588,7 +588,7 @@
 
   <div class="video-box">
     <div class="close-btn close-btn-video">&times;</div>
-    <iframe src="" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe src="" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
 
   <!--jQuery-->
