Add Yandex Metrika

--- a/web-developer-homework.github.io/final_project/app/index.html
+++ b/web-developer-homework.github.io/final_project/app/index.html
@@ -10,7 +10,8 @@
   <link rel=icon href="img/favicon-logo.png"> 
   <title>VR Box 2</title>
 </head>
-
+  <!-- Yandex.Metrika counter -->
+<!-- Yandex.Metrika counter --> <script type="text/javascript" > (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)}; m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)}) (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym"); ym(65524036, "init", { clickmap:true, trackLinks:true, accurateTrackBounce:true, webvisor:true, trackHash:true }); </script> <noscript><div><img src="https://mc.yandex.ru/watch/65524036" style="position:absolute; left:-9999px;" alt="" /></div></noscript> <!-- /Yandex.Metrika counter -->
 <body>
 
   <!-- SECTION-1 -->
@@ -27,7 +28,7 @@
 
           <div class="contact col-xl-3 offset-xl-3 col-lg-3 offset-lg-3 col-md-5 col-sm-12 col-12">
             <a href="tel:+79104551703" class="phone">+79104551703</a>
-            <p class="request-call">Заказать звонок</p>
+            <p class="request-call" id="request-call" onclick="ym(65524036,'reachGoal','request-call')">Заказать звонок</p>
           </div>
       </div> <!--row-->
       </div> <!--container-->
@@ -41,7 +42,7 @@
               VR Box II от производителя за 2390 р!
             </h1>
             <h2>Бесплатная доставка по Москве!</h2>
-            <button class="order-btn">Заказать vr box 2</button>
+            <button class="order-btn" id="order-sec-1" onclick="ym(65524036,'reachGoal','order-sec-1')">Заказать vr box 2</button>
             <img src="img/sec-1/vrBox.png" alt="VR Box">
           </div> <!--sell-prop-->
 
@@ -86,7 +87,7 @@
             </div>
           </div>
 
-          <button class="equipment_order">выбрать комплектацию и Заказать vr box 2</button>
+          <button class="equipment_order" id="equipment_order" onclick="ym(65524036,'reachGoal','equipment_order')">выбрать комплектацию и Заказать vr box 2</button>
           </div>
         </div> <!--col-->
 
@@ -168,7 +169,7 @@
                 <h1 class="headline">Введите ваши данные и нажмите заказать</h1>
                 <input type="text" name="user_name" placeholder="Введите имя" required>
                 <input type="tel" name="user_phone" placeholder="Введите телефон" id="phone" required>
-                <input type="submit" value="Заказать vr box 2">
+                <input type="submit" value="Заказать vr box 2" id="order-sec-4" onclick="ym(65524036,'reachGoal','order-sec-4')">
                 <p class="callback-text">Перезвоним в течение 10 минут</p>
               </div>
             </form>
@@ -354,7 +355,7 @@
 
       <div class="row">
         <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
-          <button class="order-btn" id="btn-order">Заказать vr box 2</button>
+          <button class="order-btn" id="order-sec-9" onclick="ym(65524036,'reachGoal','order-sec-9')">Заказать vr box 2</button>
         </div> <!--col-->
       </div> <!--row-->
     </div>
@@ -499,7 +500,7 @@
                   <h1 class="headline">Введите ваши данные и нажмите заказать</h1>
                   <input type="text" name="user_name" placeholder="Введите имя" required>
                   <input type="tel" name="user_phone" placeholder="Введите телефон" id="phone-1" required>
-                  <input type="submit" value="Заказать vr box 2">
+                  <input type="submit" value="Заказать vr box 2" id="order-sec-12" onclick="ym(65524036,'reachGoal','order-sec-12')">
                   <p class="callback-text">Перезвоним в течение 10 минут</p>
                 </div>
               </form>
@@ -515,7 +516,7 @@
         <div class="row">
           <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
             <h1 class="headline">Остались вопросы?</h1>
-            <p class="subtitle request-call">Задайте их нашему менеджеру</p>
+            <p class="subtitle request-call" id="request-call-manager" onclick="ym(65524036,'reachGoal','request-call-manager')">Задайте их нашему менеджеру</p>
           </div> <!--col-->
         </div> <!--row-->
       </div> <!--container-->
@@ -534,7 +535,7 @@
 
             <div class="contact col-xl-3 offset-xl-3 col-lg-3 offset-lg-3 col-md-5 col-sm-12">
               <a href="tel:+79104551703" class="phone">+79104551703</a>
-              <p class="request-call">Заказать звонок</p>
+              <p class="request-call" id="request-call-footer" onclick="ym(65524036,'reachGoal','request-call-footer')">Заказать звонок</p>
             </div>
         </div> <!--row-->
         </div> <!--container-->
