Add himework for lesson_15

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
                             <li class="point"><a href="web-developer-homework.github.io/lesson_9" target="_blank">Урок 9</a> — Bootstrap 4</li>
                             <li class="point"><a href="web-developer-homework.github.io/lesson_13" target="_blank">Урок 13</a> — Pixel Perfect (вёрстка формы)</li>
                             <li class="point"><a href="web-developer-homework.github.io/lesson_14/app/" target="_blank">Урок 14</a> — Подключение шрифтов</li>
+                            <li class="point"><a href="web-developer-homework.github.io/lesson_15/app/" target="_blank">Урок 15</a> — Эффекты при наведении</li>
                             <li class="point"><a href="web-developer-homework.github.io/lesson_16/app/" target="_blank">Урок 16</a> — Слайдер</li>
                             <li class="point"><a href="web-developer-homework.github.io/lesson_17/app/" target="_blank">Урок 17</a> — Всплывающее окно</li>
                             <li class="point"><a href="web-developer-homework.github.io/lesson_18/app/" target="_blank">Урок 18</a> — Табы и аккордеон</li>
