--- a/web-developer-homework.github.io/lesson_21/app/index.html
+++ b/web-developer-homework.github.io/lesson_21/app/index.html
@@ -434,11 +434,11 @@
     <script type="text/javascript" src="assets/plugins/bootstrap/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="assets/plugins/jquery-scrollTo/jquery.scrollTo.min.js"></script>     
     <script type="text/javascript" src="assets/js/main.js"></script> 
-    <script src="assets/js/parallax.min.js"></script>
+    <!-- <script src="assets/js/parallax.min.js"></script>
     <script src="assets/js/rellax.min.js"></script>
     <script>
       var rellax = new Rellax('.rellax');
-    </script>
+    </script> -->
 </body>
 </html> 
 
