--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                             <li class="point"><a href="web-developer-homework.github.io/lesson_17/app/" target="_blank">Урок 17</a> — Всплывающее окно</li>
                             <li class="point"><a href="web-developer-homework.github.io/lesson_18/app/" target="_blank">Урок 18</a> — Табы и аккордеон</li>
                             <li class="point"><a href="web-developer-homework.github.io/lesson_20/app/" target="_blank">Урок 20</a> — Видео-фон</li>
-                            <li class="point"><a href="web-developer-homework.github.io/lesson_21/app/" target="_blank">Урок 21 (офиц. ДЗ)</a> — Parallax (провал)</li>
+                            <li class="point"><a href="web-developer-homework.github.io/lesson_21/app/" target="_blank">Урок 21 (офиц. ДЗ)</a> — Parallax</li>
                             <li class="point"><a href="web-developer-homework.github.io/lesson_21/dz/" target="_blank">Урок 21 (Замена 1)</a> — Parallax</li>
                             <li class="point"><a href="web-developer-homework.github.io/lesson_21/dz2/" target="_blank">Урок 21 (Замена 2)</a> — Parallax</li>
                             <li class="point"><a href="web-developer-homework.github.io/lesson_22/app/" target="_blank">Урок 22</a> — Гео-карта</li>
@@ -77,7 +77,7 @@
                     <section class="sec-1">
                       <h2 class="hm-headline">Домашние задания:</h2>
                       <ul class="hm-list">
-                        <li class="point" ><a href="http://ervin-web-dev-homework.info/wordpress-1_0/" target="_blank" onclick="ym(54312450, 'practiceWOW', 'practiceWOW'); return true;">Урок 3</a> — Sparrow | Регистрация меню в WordPress</li>
+                        <li class="point" ><a href="web-developer-homework.github.io/wordpress-1_0/" target="_blank" onclick="ym(54312450, 'practiceWOW', 'practiceWOW'); return true;">Урок 3</a> — Sparrow | Регистрация меню в WordPress</li>
                       </ul>
                     </section>
                   </div>
